Add publisher strings

--- a/bbt.bib
+++ b/bbt.bib
@@ -5,13 +5,24 @@
 
 % NOTE: keywords should be added in lowercase
 
+% Publishers inolving more than one word
+@string{acm      = "{Association for Computing Machinery}"}
+@string{cup      = "{Cambridge University Press}"}
+@string{dagstuhl = "{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}"}
+@string{ieee     = "{IEEE Computer Society}"}
+@string{iop      = "{IOP Publishing}"}
+@string{mk       = "{Morgan Kaufmann}"}
+@string{opa      = "{Open Publishing Association}"}
+@string{oup      = "{Oxford University Press}"}
+@string{sprintl  = "{Springer International Publishing}"}
+
 @inproceedings{Abramsky2004,
   title         = {A Categorical Semantics of Quantum Protocols},
   author        = {Abramsky, Samson and Coecke, Bob},
   year          = {2004},
   month         = jul,
   booktitle     = {Proceedings of the 19th {{Annual IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
-  publisher     = {{IEEE Computer Society}},
+  publisher     = ieee,
   series        = {{{LICS}} '04},
   pages         = {415--425},
   doi           = {10.1109/LICS.2004.1319636},
@@ -29,7 +40,7 @@
   month         = nov,
   booktitle     = {Handbook of Quantum Logic and Quantum Structures},
   editor        = {Engesser, Kurt and Gabbay, Dov M. and Lehmann, Daniel},
-  publisher     = {{Elsevier}},
+  publisher     = {Elsevier},
   address       = {Amsterdam},
   pages         = {261--323},
   doi           = {10.1016/B978-0-444-52869-8.50010-4},
@@ -46,7 +57,7 @@
   year          = {2005},
   month         = jun,
   booktitle     = {Proceedings of the 20th Annual {{IEEE}} Symposium on Logic in Computer Science},
-  publisher     = {{IEEE Computer Society}},
+  publisher     = ieee,
   address       = {{Chicago, USA}},
   series        = {{{LICS}} '05},
   pages         = {249--258},
@@ -65,7 +76,7 @@
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {{Cambridge}},
   pages     = {173--205},
   crossref  = {Gay2009},
@@ -82,7 +93,7 @@
   month     = jan,
   booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
   editor    = {Selinger, Peter and Chiribella, Giulio},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {287},
@@ -110,7 +121,7 @@
   month         = may,
   booktitle     = {Reversible {{Computation}} ({{RC}} '19)},
   editor        = {Thomsen, Michael Kirkedal and Soeken, Mathias},
-  publisher     = {{Springer International Publishing}},
+  publisher     = sprintl,
   address       = {{Cham}},
   series        = {Lecture Notes in Computer Science},
   volume        = {11497},
@@ -128,7 +139,7 @@
   year      = {2018},
   month     = nov,
   journal   = {ACM Transactions on Computational Logic},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   volume    = {19},
   number    = {4},
   eid       = {28},
@@ -146,7 +157,7 @@
   year      = {2014},
   month     = sep,
   journal   = {New Journal of Physics},
-  publisher = {{IOP} Publishing},
+  publisher = iop,
   volume    = {16},
   number    = {9},
   eid       = {093021},
@@ -163,7 +174,7 @@
   month     = nov,
   booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {195},
@@ -179,7 +190,7 @@
   month         = jul,
   booktitle     = {New Structures for Physics},
   editor        = {Coecke, Bob},
-  publisher     = {{Springer}},
+  publisher     = {Springer},
   address       = {{Berlin, Heidelberg}},
   pages         = {95--172},
   doi           = {10.1007/978-3-642-12821-9_2},
@@ -211,7 +222,7 @@
   year       = {2020},
   month      = jun,
   booktitle  = {Proceedings of the 41st {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
-  publisher  = {{Association for Computing Machinery}},
+  publisher  = acm,
   address    = {{New York, NY, USA}},
   series     = {{{PLDI}} '20},
   pages      = {286--300},
@@ -228,7 +239,7 @@
   month     = nov,
   booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {195},
@@ -274,7 +285,7 @@
   month     = aug,
   booktitle = {46th International Symposium on Mathematical Foundations of Computer Science (MFCS 2021)},
   editor    = {Bonchi, Filippo and Puglisi, Simon J.},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {202},
@@ -293,7 +304,7 @@
   month         = mar,
   booktitle     = {Programming Languages and Systems, {{ESOP}} 2021},
   editor        = {Yoshida, Nobuko},
-  publisher     = {{Springer International Publishing}},
+  publisher     = sprintl,
   address       = {{Cham}},
   series        = {Lecture Notes in Computer Science},
   volume        = {12648},
@@ -365,7 +376,7 @@
   year      = {2017},
   month     = mar,
   booktitle = {Picturing Quantum Processes: A First Course in Quantum Theory and Diagrammatic Reasoning},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {Cambridge},
   doi       = {10.1017/9781316219317},
   abstract  = {The unique features of the quantum world are explained in this book through the language of diagrams, setting out an innovative visual method for presenting complex theories. Requiring only basic mathematical literacy, this book employs a unique formalism that builds an intuitive understanding of quantum features while eliminating the need for complex calculations. This entirely diagrammatic presentation of quantum theory represents the culmination of ten years of research, uniting classical techniques in linear algebra and Hilbert spaces with cutting-edge developments in quantum computation and foundations. Written in an entertaining and user-friendly style and including more than one hundred exercises, this book is an ideal first course in quantum theory, foundations, and computation for students from undergraduate to PhD level, as well as an opportunity for researchers from a broad range of fields, from physics to biology, linguistics, and cognitive science, to discover a new set of tools for studying processes and interaction.}
@@ -414,7 +425,7 @@
   year          = {2017},
   month         = jan,
   booktitle     = {Proceedings of the 44th ACM SIGPLAN Symposium on Principles of Programming Languages},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {New York, NY, USA},
   series        = {POPL '17},
   pages         = {833--845},
@@ -460,7 +471,7 @@
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {{Cambridge}},
   pages     = {235--310},
   crossref  = {Gay2009},
@@ -488,7 +499,7 @@
   year          = {2021},
   month         = dec,
   journal       = {ACM Transactions on Quantum Computing},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {{New York, NY, USA}},
   volume        = {2},
   number        = {4},
@@ -509,7 +520,7 @@
   year          = {2020},
   month         = jul,
   booktitle     = {Proceedings of the 35th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {{New York, NY, USA}},
   series        = {{{LICS}} '20},
   pages         = {440--453},
@@ -527,7 +538,7 @@
   month         = jul,
   booktitle     = {Reversible Computation (RC '20)},
   editor        = {Lanese, Ivan and Rawski, Mariusz},
-  publisher     = {{Springer International Publishing}},
+  publisher     = sprintl,
   address       = {{Cham}},
   series        = {Lecture Notes in Computer Science},
   volume        = {12227},
@@ -545,7 +556,7 @@
   year          = {2005},
   month         = jan,
   booktitle     = {Proceedings of the 32nd {{ACM SIGPLAN}}-{{SIGACT}} Symposium on {{Principles}} of Programming Languages},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {{New York, NY, USA}},
   series        = {{{POPL}} '05},
   pages         = {145--157},
@@ -578,7 +589,7 @@
   month         = jul,
   booktitle     = {Computer Aided Verification ({{CAV}} '08)},
   editor        = {Gupta, Aarti and Malik, Sharad},
-  publisher     = {{Springer}},
+  publisher     = {Springer},
   address       = {Berlin, Heidelberg},
   series        = {Lecture Notes in Computer Science},
   volume        = {5123},
@@ -596,7 +607,7 @@
   month     = nov,
   booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {Cambridge},
   doi       = {10.1017/CBO9781139193313},
   abstract  = {The study of computational processes based on the laws of quantum mechanics has led to the discovery of new algorithms, cryptographic techniques, and communication primitives. This book explores quantum computation from the perspective of the branch of theoretical computer science known as semantics, as an alternative to the more well-known studies of algorithmics, complexity theory, and information theory. It collects chapters from leading researchers in the field, discussing the theory of quantum programming languages, logics and tools for reasoning about quantum systems, and novel approaches to the foundations of quantum mechanics. This book is suitable for graduate students and researchers in quantum information and computation, as well as those in semantics, who want to learn about a new field arising from the application of semantic techniques to quantum information and computation.}
@@ -636,7 +647,7 @@
   year          = {2013},
   month         = jun,
   booktitle     = {Proceedings of the 34th {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {{New York, NY, USA}},
   series        = {{{PLDI}} '13},
   pages         = {333--342},
@@ -654,7 +665,7 @@
   month         = jul,
   booktitle     = {Reversible {{Computation}} ({{RC}} '13)},
   editor        = {Dueck, Gerhard W. and Miller, D. Michael},
-  publisher     = {{Springer}},
+  publisher     = {Springer},
   address       = {Berlin, Heidelberg},
   series        = {Lecture Notes in Computer Science},
   volume        = {7948},
@@ -716,7 +727,7 @@
   year      = {2019},
   month     = nov,
   booktitle = {Categories for Quantum Theory: An Introduction},
-  publisher = {{Oxford University Press}},
+  publisher = oup,
   address   = {Oxford},
   doi       = {10.1093/oso/9780198739623.001.0001},
   abstract  = {Monoidal category theory serves as a powerful framework for describing logical aspects of quantum theory, giving an abstract language for parallel and sequential composition, and a conceptual way to understand many high-level quantum phenomena. This text lays the foundation for this categorical quantum mechanics, with an emphasis on the graphical calculus which makes computation intuitive. Biproducts and dual objects are introduced and used to model superposition and entanglement, with quantum teleportation studied abstractly using these structures. Monoids, Frobenius structures and Hopf algebras are described, and it is shown how they can be used to model classical information and complementary observables. The CP construction, a categorical tool to describe probabilistic quantum systems, is also investigated. The last chapter introduces higher categories, surface diagrams and 2-Hilbert spaces, and shows how the language of duality in monoidal 2-categories can be used to reason about quantum protocols, including quantum teleportation and dense coding.
@@ -783,7 +794,7 @@
   month     = jun,
   booktitle = {12th International Conference on Interactive Theorem Proving (ITP 2021)},
   editor    = {Cohen, Liron and Kaliszyk, Cezary},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {193},
@@ -802,7 +813,7 @@
   month     = nov,
   booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {195},
@@ -818,7 +829,7 @@
   month     = jan,
   booktitle = {9th Workshop on Evaluation and Usability of Programming  Languages and Tools (PLATEAU 2018)},
   editor    = {Titus Barik and Joshua Sunshine and Sarah Chasins},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   series    = {OpenAccess Series in Informatics (OASIcs)},
   volume    = {67},
@@ -836,7 +847,7 @@
   month     = jan,
   booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
   editor    = {Selinger, Peter and Chiribella, Giulio},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {287},
@@ -852,7 +863,7 @@
   year      = {2022},
   month     = jun,
   journal   = {ACM Transactions on Quantum Computing},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {New York, NY, USA},
   volume    = {3},
   number    = {2},
@@ -919,7 +930,7 @@
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {{Cambridge}},
   pages     = {206--234},
   crossref  = {Gay2009},
@@ -945,7 +956,7 @@
   year      = {2021},
   month     = sep,
   journal   = {ACM Transactions on Quantum Computing},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {New York, NY, USA},
   volume    = {2},
   number    = {3},
@@ -964,13 +975,13 @@
   month     = sep,
   booktitle = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
   editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {340},
   pages     = {174--187},
   doi       = {10.4204/EPTCS.340.9},
-  abstract  = {We introduce the monoidal closed category qCPO of quantum cpos, whose objects are "quantized" analogs of omega-complete partial orders (cpos). The category qCPO is enriched over the category CPO of cpos, and contains both CPO, and the opposite of the category FdAlg of finite-dimensional von Neumann algebras as monoidal subcategories. We use qCPO to construct a sound model for the quantum programming language Proto-Quipper-M (PQM) extended with term recursion, as well as a sound and computationally adequate model for the Linear/Non-Linear Fixpoint Calculus (LNL-FPC), which is both an extension of the Fixpoint Calculus (FPC) with linear types, and an extension of a circuit-free fragment of PQM that includes recursive types.},
+  abstract  = {We introduce the monoidal closed category qCPO of quantum cpos, whose objects are ``quantized'' analogs of omega-complete partial orders (cpos). The category qCPO is enriched over the category CPO of cpos, and contains both CPO, and the opposite of the category FdAlg of finite-dimensional von Neumann algebras as monoidal subcategories. We use qCPO to construct a sound model for the quantum programming language Proto-Quipper-M (PQM) extended with term recursion, as well as a sound and computationally adequate model for the Linear/Non-Linear Fixpoint Calculus (LNL-FPC), which is both an extension of the Fixpoint Calculus (FPC) with linear types, and an extension of a circuit-free fragment of PQM that includes recursive types.},
   keywords  = {proto-quipper-m}
 }
 
@@ -1011,7 +1022,7 @@
   month     = nov,
   booktitle = {41st IARCS Annual Conference on Foundations of Software Technology and Theoretical Computer Science (FSTTCS 2021)},
   editor    = {Boja\'{n}czy, Mikołaj and Chekuri, Chandra},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {213},
@@ -1073,14 +1084,14 @@
   month     = jul,
   booktitle = {48th International Colloquium on Automata, Languages, and Programming (ICALP 2021)},
   editor    = {Bansal, Nikhil and Merelli, Emanuela and Worrell, James},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {198},
   eid       = {136},
   pages     = {136:1--136:20},
   doi       = {10.4230/LIPIcs.ICALP.2021.136},
-  abstract  = {We present a variant of the quantum relational Hoare logic from (Unruh, POPL 2019) that allows us to use "expectations" in pre- and postconditions. That is, when reasoning about pairs of programs, our logic allows us to quantitatively reason about how much certain pre-/postconditions are satisfied that refer to the relationship between the programs inputs/outputs.},
+  abstract  = {We present a variant of the quantum relational Hoare logic from (Unruh, POPL 2019) that allows us to use ``expectations'' in pre- and postconditions. That is, when reasoning about pairs of programs, our logic allows us to quantitatively reason about how much certain pre-/postconditions are satisfied that refer to the relationship between the programs inputs/outputs.},
   keywords  = {quantum cryptography, hoare logic, formal verification}
 }
 
@@ -1091,7 +1102,7 @@
   year          = {2018},
   month         = jul,
   booktitle     = {Proceedings of the 33rd {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {{New York, NY, USA}},
   series        = {{{LICS}} '18},
   pages         = {659--668},
@@ -1109,7 +1120,7 @@
   month     = jul,
   booktitle = {Computer {{Aided Verification}} ({{CAV}} '19)},
   editor    = {Dillig, Isil and Tasiran, Serdar},
-  publisher = {{Springer International Publishing}},
+  publisher = sprintl,
   address   = {{Cham}},
   series    = {Lecture Notes in Computer Science},
   volume    = {11562},
@@ -1153,7 +1164,7 @@
   year          = {2021},
   month         = jun,
   journal       = {ACM Transactions on Quantum Computing},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {New York, NY, USA},
   volume        = {2},
   number        = {2},
@@ -1173,7 +1184,7 @@
   year      = {2019},
   month     = mar,
   journal   = {Dagstuhl Reports},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   volume    = {8},
   number    = {9},
@@ -1191,7 +1202,7 @@
   year      = {2010},
   month     = dec,
   booktitle = {Quantum Computation and Quantum Information: 10th Anniversary Edition},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {{Cambridge}},
   doi       = {10.1017/CBO9780511976667},
   abstract  = {One of the most cited books in physics of all time, Quantum Computation and Quantum Information remains the best textbook in this exciting field of science. This 10th anniversary edition includes an introduction from the authors setting the work in context. This comprehensive textbook describes such remarkable effects as fast quantum algorithms, quantum teleportation, quantum cryptography and quantum error-correction. Quantum mechanics and computer science are introduced before moving on to describe what a quantum computer is, how it can be used to solve problems faster than 'classical' computers and its real-world implementation. It concludes with an in-depth treatment of quantum information. Containing a wealth of figures and exercises, this well-known textbook is ideal for courses on the subject, and will interest beginning graduate students and researchers in physics, computer science, mathematics, and electrical engineering.}
@@ -1213,7 +1224,7 @@
   year          = {2014},
   month         = jan,
   booktitle     = {Proceedings of the 41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {New York, NY, USA},
   series        = {POPL '14},
   pages         = {647--658},
@@ -1231,7 +1242,7 @@
   year       = {2017},
   month      = apr,
   booktitle  = {Theory and {{Applications}} of {{Models}} of {{Computation}} ({{TAMC}} '17)},
-  publisher  = {{Springer International Publishing}},
+  publisher  = sprintl,
   address    = {{Cham}},
   series     = {Lecture Notes in Computer Science},
   volume     = {10185},
@@ -1248,7 +1259,7 @@
   month     = apr,
   booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications (Linearity-TLLA '18), Oxford, {{UK}}, 7--8 July 2018},
   editor    = {Ehrhard, Thomas and Fern{\'a}ndez, Maribel and de Paiva, Valeria and {Tortora de Falco}, Lorenzo},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {292},
   pages     = {133--147},
@@ -1278,7 +1289,7 @@
   year      = {2021},
   month     = jun,
   booktitle = {Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {New York, NY, USA},
   series    = {{{PLDI}} '21},
   pages     = {222--236},
@@ -1294,7 +1305,7 @@
   year      = {2017},
   month     = jan,
   booktitle = {Proceedings of the 44th {{ACM SIGPLAN Symposium}} on {{Principles}} of {{Programming Languages}}},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {{New York, NY, USA}},
   series    = {{{POPL}} '17},
   pages     = {846--858},
@@ -1340,7 +1351,7 @@
   month     = apr,
   booktitle = {Foundations of Software Science and Computation Structures, FoSSaCS 2020},
   editor    = {Goubault-Larrecq, Jean and K{\"o}nig, Barbara},
-  publisher = {{Springer International Publishing}},
+  publisher = sprintl,
   address   = {Cham},
   series    = {Lecture Notes in Computer Science},
   volume    = {12077},
@@ -1366,7 +1377,7 @@
   author    = {{Quingo Development Team}},
   year      = {2021},
   month     = dec,
-  publisher = {Association for Computing Machinery},
+  publisher = acm,
   address   = {New York, NY, USA},
   journal   = {ACM Transactions on Quantum Computing},
   volume    = {2},
@@ -1401,7 +1412,7 @@
   month     = feb,
   booktitle = {Proceedings of the 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, July 3--7, 2017},
   editor    = {Coecke, Bob and Kissinger, Aleks},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {266},
@@ -1446,7 +1457,7 @@
   month      = jan,
   booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
   editor     = {Selinger, Peter and Chiribella, Giulio},
-  publisher  = {{Open Publishing Association}},
+  publisher  = opa,
   address    = {Waterloo, NSW, Australia},
   series     = {Electronic Proceedings in Theoretical Computer Science},
   volume     = {287},
@@ -1462,7 +1473,7 @@
   month     = jul,
   booktitle = {3rd Summit on Advances in Programming Languages (SNAPL 2019)},
   editor    = {Benjamin S. Lerner and Rastislav Bod{\'i}k and Shriram Krishnamurthi},
-  publisher = {{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}},
+  publisher = dagstuhl,
   address   = {Dagstuhl, Germany},
   series    = {Leibniz International Proceedings in Informatics (LIPIcs)},
   volume    = {136},
@@ -1480,7 +1491,7 @@
   month     = sep,
   booktitle = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
   editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {340},
@@ -1497,7 +1508,7 @@
   year      = {2018},
   month     = apr,
   booktitle = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
-  publisher = {{Elsevier}},
+  publisher = {Elsevier},
   series    = {Electronic Notes in Theoretical Computer Science},
   volume    = {336},
   pages     = {257--279},
@@ -1530,7 +1541,7 @@
   month     = feb,
   booktitle = {Proceedings of the 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, July 3--7, 2017},
   editor    = {Coecke, Bob and Kissinger, Aleks},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {266},
@@ -1590,7 +1601,7 @@
   month         = apr,
   booktitle     = {Foundations of Software Science and Computation Structures, FoSSaCS 2018},
   editor        = {Baier, Christel and Dal Lago, Ugo},
-  publisher     = {{Springer International Publishing}},
+  publisher     = sprintl,
   address       = {{Cham}},
   series        = {Lecture Notes in Computer Science},
   volume        = {10803},
@@ -1608,7 +1619,7 @@
   month     = apr,
   booktitle = {Proceedings of the 7th {International Symposium} on {Functional} and {{Logic Programming}}},
   editor    = {Kameyama, Yukiyoshi and Stuckey, Peter J.},
-  publisher = {{Springer}},
+  publisher = {Springer},
   address   = {{Berlin, Heidelberg}},
   series    = {Lecture Notes in Computer Science},
   volume    = {2998},
@@ -1654,7 +1665,7 @@
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {{Cambridge}},
   pages     = {135--172},
   crossref  = {Gay2009},
@@ -1707,7 +1718,7 @@
   month     = sep,
   booktitle = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
   editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
-  publisher = {{Open Publishing Association}},
+  publisher = opa,
   address   = {Waterloo, NSW, Australia},
   series    = {Electronic Proceedings in Theoretical Computer Science},
   volume    = {340},
@@ -1725,7 +1736,7 @@
   year          = {2020},
   month         = nov,
   journal       = {Quantum Science and Technology},
-  publisher     = {{IOP} Publishing},
+  publisher     = iop,
   volume        = {6},
   number        = {1},
   eid           = {014003},
@@ -1755,7 +1766,7 @@
   year      = {2015},
   month     = jan,
   booktitle = {Proceedings of the 42nd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {New York, NY, USA},
   series    = {POPL '15},
   pages     = {395--406},
@@ -1815,7 +1826,7 @@
   year          = {2018},
   month         = feb,
   booktitle     = {Proceedings of the {{Real World Domain Specific Languages Workshop}} 2018},
-  publisher     = {{Association for Computing Machinery}},
+  publisher     = acm,
   address       = {{New York, NY, USA}},
   series        = {{{RWDSL}} '18},
   eid           = {7},
@@ -1852,7 +1863,7 @@
   year          = {2019},
   month         = jun,
   booktitle     = {Proceedings of the 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
-  publisher     = {{IEEE Computer Society}},
+  publisher     = ieee,
   address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '19},
   pages         = {1--13},
@@ -1911,7 +1922,7 @@
   month     = jun,
   booktitle = {Logic, Language, Information and Computation},
   editor    = {Ono, Hiroakira and Kanazawa, Makoto and de Queiroz, Ruy},
-  publisher = {{Springer}},
+  publisher = {Springer},
   address   = {Berlin, Heidelberg},
   pages     = {379--393},
   doi       = {10.1007/978-3-642-02261-6_30},
@@ -1927,7 +1938,7 @@
   month     = nov,
   booktitle = {Formal Methods: Foundations and Applications: 12th Brazilian Symposium on Formal Methods, SBMF 2009 Gramado, Brazil, August 19-21, 2009 Revised Selected Papers},
   editor    = {Oliveira, Marcel Vin{\'i}cius Medeiros and Woodcock, Jim},
-  publisher = {{Springer}},
+  publisher = {Springer},
   address   = {Berlin, Heidelberg},
   pages     = {321--335},
   numpages  = {15},
@@ -1954,7 +1965,7 @@
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
   editor    = {Gay, Simon J. and Mackie, Ian},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {{Cambridge}},
   pages     = {311--360},
   crossref  = {Gay2009},
@@ -2036,7 +2047,7 @@
   year      = {2016},
   month     = mar,
   booktitle = {Foundations of Quantum Programming},
-  publisher = {{Morgan Kaufmann}},
+  publisher = mk,
   address   = {{Amsterdam}},
   doi       = {10.1016/C2014-0-02660-3},
   abstract  = {Foundations of Quantum Programming discusses how new programming methodologies and technologies developed for current computers can be extended to exploit the unique power of quantum computers, which promise dramatic advantages in processing speed over currently available computer systems. Governments and industries around the globe are now investing vast amounts of money with the expectation of building practical quantum computers. Drawing upon years of experience and research in quantum computing research and using numerous examples and illustrations, Mingsheng Ying has created a very useful reference on quantum programming languages and important tools and techniques required for quantum programming, making the book a valuable resource for academics, researchers, and developers.}
@@ -2048,7 +2059,7 @@
   year      = {2017},
   month     = jan,
   booktitle = {Proceedings of the 44th ACM SIGPLAN Symposium on Principles of Programming Languages},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {New York, NY, USA},
   series    = {{POPL} '17},
   pages     = {818--832},
@@ -2076,7 +2087,7 @@
   year      = {2021},
   month     = jan,
   booktitle = {Model Checking Quantum Systems: Principles and Algorithms},
-  publisher = {{Cambridge University Press}},
+  publisher = cup,
   address   = {Cambridge},
   doi       = {10.1017/9781108613323},
   abstract  = {Model checking is one of the most successful verification techniques and has been widely adopted in traditional computing and communication hardware and software industries. This book provides the first systematic introduction to model checking techniques applicable to quantum systems, with broad potential applications in the emerging industry of quantum computing and quantum communication as well as quantum physics. Suitable for use as a course textbook and for self-study, graduate and senior undergraduate students will appreciate the step-by-step explanations and the exercises included. Researchers and engineers in the related fields can further develop these techniques in their own work, with the final chapter outlining potential future applications.},
@@ -2103,7 +2114,7 @@
   year      = {2021},
   month     = jun,
   booktitle = {Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {New York, NY, USA},
   series    = {{{PLDI}} '21},
   pages     = {542--558},
@@ -2148,7 +2159,7 @@
   year      = {2019},
   month     = jun,
   booktitle = {Proceedings of the 40th {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
-  publisher = {{Association for Computing Machinery}},
+  publisher = acm,
   address   = {{New York, NY, USA}},
   series    = {{{PLDI}} '19},
   pages     = {1149--1162},
@@ -2164,7 +2175,7 @@
   year          = {2021},
   month         = jul,
   booktitle     = {Proceedings of the 36th Annual ACM/IEEE Symposium on Logic in Computer Science},
-  publisher     = {{IEEE Computer Society}},
+  publisher     = ieee,
   address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '21},
   pages         = {1--14},
