--- a/bbt.bib
+++ b/bbt.bib
@@ -5,7 +5,7 @@
 
 % NOTE: keywords should be added in lowercase
 
-% Publishers inolving more than one word
+% Publishers (inolving more than one word)
 @string{acm      = "{Association for Computing Machinery}"}
 @string{cup      = "{Cambridge University Press}"}
 @string{dagstuhl = "{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}"}
@@ -15,6 +15,29 @@
 @string{opa      = "{Open Publishing Association}"}
 @string{oup      = "{Oxford University Press}"}
 @string{sprintl  = "{Springer International Publishing}"}
+
+% Journals (inolving more than one word)
+@string{jar    = "{Journal of Automated Reasoning}"}
+@string{mscs   = "{Mathematical Structures in Computer Science}"}
+@string{njp    = "{New Journal of Physics}"}
+@string{pacmpl = "{Proceedings of the ACM on Programming Languages}"}
+@string{tqc    = "{ACM Transactions on Quantum Computing}"}
+
+%% Journals, yet to be replaced
+% @string{apal   = "{Annals of Pure and Applied Logic}"}
+% @string{cacm   = "{Communications of the ACM}"}
+% @string{cj     = "{The Computer Journal}"}
+% @string{epjd   = "{European Physical Journal D: Atomic, Molecular, Optical and Plasma Physics}"}
+% @string{jacm   = "{Journal of the ACM}"}
+% @string{lmcs   = "{Logical Methods in Computer Science}"}
+% @string{np     = "{Nature Physics}"}
+% @string{nrp    = "{Nature Reviews Physics}"}
+% @string{pc     = "{Parallel Computing}"}
+% @string{qst    = "{Quantum Science and Technology}"}
+% @string{scp    = "{Science of Computer Programming}"}
+% @string{tcl    = "{ACM Transactions on Computational Logic}"}
+% @string{tcs    = "{Theoretical Computer Science}"}
+% @string{toplas = "{ACM Transactions on Programming Languages and Systems}"}
 
 @inproceedings{Abramsky2004,
   title         = {A Categorical Semantics of Quantum Protocols},
@@ -156,7 +179,7 @@
   author    = {Backens, Miriam},
   year      = {2014},
   month     = sep,
-  journal   = {New Journal of Physics},
+  journal   = njp,
   publisher = iop,
   volume    = {16},
   number    = {9},
@@ -253,7 +276,7 @@
   author   = {Bordg, Anthony and Lachnitt, Hanna and He, Yijun},
   year     = {2021},
   month    = jun,
-  journal  = {Journal of Automated Reasoning},
+  journal  = jar,
   volume   = {65},
   number   = {5},
   pages    = {691--709},
@@ -359,7 +382,7 @@
   author     = {Coecke, Bob and Duncan, Ross},
   year       = {2011},
   month      = apr,
-  journal    = {New Journal of Physics},
+  journal    = njp,
   volume     = {13},
   number     = {4},
   eid        = {043016},
@@ -484,7 +507,7 @@
   author   = {D'Hondt, Ellie and Panangaden, Prakash},
   year     = {2006},
   month    = jun,
-  journal  = {Mathematical Structures in Computer Science},
+  journal  = mscs,
   volume   = {16},
   number   = {3},
   pages    = {429--451},
@@ -498,7 +521,7 @@
   author        = {Feng, Yuan and Ying, Mingsheng},
   year          = {2021},
   month         = dec,
-  journal       = {ACM Transactions on Quantum Computing},
+  journal       = tqc,
   publisher     = acm,
   address       = {{New York, NY, USA}},
   volume        = {2},
@@ -573,7 +596,7 @@
   author   = {Gay, Simon J.},
   year     = {2006},
   month    = aug,
-  journal  = {Mathematical Structures in Computer Science},
+  journal  = mscs,
   volume   = {16},
   number   = {4},
   pages    = {581--600},
@@ -742,7 +765,7 @@
   author   = {Heunen, Chris and Kaarsgaard, Robin},
   year     = {2022},
   month    = jan,
-  journal  = {Proceedings of the ACM on Programming Languages},
+  journal  = pacmpl,
   volume   = {6},
   number   = {POPL},
   eid      = {2},
@@ -772,7 +795,7 @@
   author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
   year          = {2021},
   month         = jan,
-  journal       = {Proceedings of the ACM on Programming Languages},
+  journal       = pacmpl,
   volume        = {5},
   number        = {POPL},
   eid           = {37},
@@ -862,7 +885,7 @@
   author    = {Ittah, David and H{\"a}ner, Thomas and Kliuchnikov, Vadym and Hoefler, Torsten},
   year      = {2022},
   month     = jun,
-  journal   = {ACM Transactions on Quantum Computing},
+  journal   = tqc,
   publisher = acm,
   address   = {New York, NY, USA},
   volume    = {3},
@@ -909,7 +932,7 @@
   author        = {Jia, Xiaodong and Kornell, Andre and Lindenhovius, Bert and Mislove, Michael and Zamdzhiev, Vladimir},
   year          = {2022},
   month         = jan,
-  journal       = {Proceedings of the ACM on Programming Languages},
+  journal       = pacmpl,
   volume        = {6},
   number        = {POPL},
   eid           = {26},
@@ -955,7 +978,7 @@
   title     = {On the Impact of Affine Loop Transformations in Qubit Allocation},
   year      = {2021},
   month     = sep,
-  journal   = {ACM Transactions on Quantum Computing},
+  journal   = tqc,
   publisher = acm,
   address   = {New York, NY, USA},
   volume    = {2},
@@ -1003,7 +1026,7 @@
   title    = {A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic},
   year     = {2022},
   month    = jan,
-  journal  = {Proceedings of the ACM on Programming Languages},
+  journal  = pacmpl,
   volume   = {6},
   number   = {POPL},
   eid      = {36},
@@ -1048,7 +1071,7 @@
   author   = {Li, Yangjia and Ying, Mingsheng},
   year     = {2017},
   month    = dec,
-  journal  = {Proceedings of the ACM on Programming Languages},
+  journal  = pacmpl,
   volume   = {2},
   number   = {POPL},
   eid      = {35},
@@ -1065,7 +1088,7 @@
   author   = {Li, Gushu and Zhou, Li and Yu, Nengkun and Ding, Yufei and Ying, Mingsheng and Xie, Yuan},
   year     = {2020},
   month    = nov,
-  journal  = {Proceedings of the ACM on Programming Languages},
+  journal  = pacmpl,
   volume   = {4},
   number   = {OOPSLA},
   eid      = {150},
@@ -1147,7 +1170,7 @@
   author        = {Mahmoud, Mohamed Yousri and Felty, Amy P.},
   year          = {2019},
   month         = dec,
-  journal       = {Journal of Automated Reasoning},
+  journal       = jar,
   volume        = {63},
   number        = {4},
   pages         = {967--1002},
@@ -1163,7 +1186,7 @@
   author        = {McCaskey, Alexander and Nguyen, Thien and Santana, Anthony and Claudino, Daniel and Kharazi, Tyler and Finkel, Hal},
   year          = {2021},
   month         = jun,
-  journal       = {ACM Transactions on Quantum Computing},
+  journal       = tqc,
   publisher     = acm,
   address       = {New York, NY, USA},
   volume        = {2},
@@ -1273,7 +1296,7 @@
   author        = {Paolini, Luca and Piccolo, Mauro and Zorzi, Margherita},
   year          = {2019},
   month         = dec,
-  journal       = {Journal of Automated Reasoning},
+  journal       = jar,
   volume        = {63},
   number        = {4},
   pages         = {941--966},
@@ -1379,7 +1402,7 @@
   month     = dec,
   publisher = acm,
   address   = {New York, NY, USA},
-  journal   = {ACM Transactions on Quantum Computing},
+  journal   = tqc,
   volume    = {2},
   number    = {4},
   eid       = {19},
@@ -1634,7 +1657,7 @@
   author   = {Selinger, Peter},
   year     = {2004},
   month    = aug,
-  journal  = {Mathematical Structures in Computer Science},
+  journal  = mscs,
   volume   = {14},
   number   = {4},
   pages    = {527--586},
@@ -1649,7 +1672,7 @@
   author   = {Selinger, Peter and Valiron, Beno{\^i}t},
   year     = {2006},
   month    = jun,
-  journal  = {Mathematical Structures in Computer Science},
+  journal  = mscs,
   volume   = {16},
   number   = {3},
   pages    = {527--552},
@@ -1845,7 +1868,7 @@
   author   = {Unruh, Dominique},
   year     = {2019},
   month    = jan,
-  journal  = {Proceedings of the ACM on Programming Languages},
+  journal  = pacmpl,
   volume   = {3},
   number   = {POPL},
   eid      = {33},
@@ -1904,7 +1927,7 @@
   author        = {Vizzotto, Juliana Kaizer and Altenkirch, Thorsten and Sabry, Amr},
   year          = {2006},
   month         = jul,
-  journal       = {Mathematical Structures in Computer Science},
+  journal       = mscs,
   volume        = {16},
   number        = {3},
   pages         = {453--468},
@@ -2130,7 +2153,7 @@
   title    = {Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs},
   year     = {2022},
   month    = jan,
-  journal  = {Proceedings of the ACM on Programming Languages},
+  journal  = pacmpl,
   volume   = {6},
   number   = {POPL},
   eid      = {30},
