journal names do not require preserving case

--- a/bbt.bib
+++ b/bbt.bib
@@ -16,28 +16,28 @@
 @string{oup      = "{Oxford University Press}"}
 @string{sprintl  = "{Springer International Publishing}"}
 
-% Journals (inolving more than one word)
-@string{jar    = "{Journal of Automated Reasoning}"}
-@string{mscs   = "{Mathematical Structures in Computer Science}"}
-@string{njp    = "{New Journal of Physics}"}
-@string{pacmpl = "{Proceedings of the ACM on Programming Languages}"}
-@string{tqc    = "{ACM Transactions on Quantum Computing}"}
+% Journals (inolving more than one word), at least two entries
+@string{jar    = "Journal of Automated Reasoning"}
+@string{mscs   = "Mathematical Structures in Computer Science"}
+@string{njp    = "New Journal of Physics"}
+@string{pacmpl = "Proceedings of the ACM on Programming Languages"}
+@string{tqc    = "ACM Transactions on Quantum Computing"}
 
-%% Journals, yet to be replaced
-% @string{apal   = "{Annals of Pure and Applied Logic}"}
-% @string{cacm   = "{Communications of the ACM}"}
-% @string{cj     = "{The Computer Journal}"}
-% @string{epjd   = "{European Physical Journal D: Atomic, Molecular, Optical and Plasma Physics}"}
-% @string{jacm   = "{Journal of the ACM}"}
-% @string{lmcs   = "{Logical Methods in Computer Science}"}
-% @string{np     = "{Nature Physics}"}
-% @string{nrp    = "{Nature Reviews Physics}"}
-% @string{pc     = "{Parallel Computing}"}
-% @string{qst    = "{Quantum Science and Technology}"}
-% @string{scp    = "{Science of Computer Programming}"}
-% @string{tcl    = "{ACM Transactions on Computational Logic}"}
-% @string{tcs    = "{Theoretical Computer Science}"}
-% @string{toplas = "{ACM Transactions on Programming Languages and Systems}"}
+% Journals, only one entry, yet to be replaced
+@string{apal   = "Annals of Pure and Applied Logic"}
+@string{cacm   = "Communications of the ACM"}
+@string{cj     = "The Computer Journal"}
+@string{epjd   = "European Physical Journal D: Atomic, Molecular, Optical and Plasma Physics"}
+@string{jacm   = "Journal of the ACM"}
+@string{lmcs   = "Logical Methods in Computer Science"}
+@string{np     = "Nature Physics"}
+@string{nrp    = "Nature Reviews Physics"}
+@string{pc     = "Parallel Computing"}
+@string{qst    = "Quantum Science and Technology"}
+@string{scp    = "Science of Computer Programming"}
+@string{tcl    = "ACM Transactions on Computational Logic"}
+@string{tcs    = "Theoretical Computer Science"}
+@string{toplas = "ACM Transactions on Programming Languages and Systems"}
 
 @inproceedings{Abramsky2004,
   title         = {A Categorical Semantics of Quantum Protocols},
